# mcp-remote-control

./: README.md  pyproject.toml
src/mcp_remote_control/: roku_bridge.py  server.py
