[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-roku-control"
version = "0.1.1"
description = "AI-powered local network control for TVs and devices. Currently supports Roku TVs via ECP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
mcp-roku-control = "mcp_remote_control.server:main"
